--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,7 @@ en:
   leave_password: "If you don't want to change your password, leave both boxes empty."
   notes:
     user_email: "This is the email that you use to sign in, and to which we send reminders and administrative messages."
+  permission_denied: "The current account does not have permission to access that resource. Please sign in."
   please_sign_in: "Please sign in"
   preferences: "Preferences"
   sign_in: "Sign in"
